# tauri-plugin-screenshot-hd

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
